Chore/auto sync both targets (#42)
* chore(sync): main → dev workflow hardening (backport) (#37)

* chore: unify service-deploy workflow across branches

* chore(sync): robust auto PR main→dev (pre-resolve service-deploy.yml, auto-merge)

* Staging to Prod (#41)

* feat(chart): add Helm chart stub for dev auto-deploy demo

* chore: update workflows (ci, deploy, codeql, release), CODEOWNERS and README

* chore: fix yamllint violations across workflows

* chore: satisfy yamllint across workflows (brackets/colons/EOF/indent)

* fix(release): use softprops for auto notes (#12)

* fix(release): use softprops for auto notes (#12) (#13)

* chore(ci): run CI on PRs only; deploy on push; release on tags (#15)

* New CI Changes (#16)

* fix(release): use softprops for auto notes (#12)

* chore(ci): run CI on PRs only; deploy on push; release on tags (#15)

* Main (#18)

* Promote: release workflow to main (#14)

* feat(chart): add Helm chart stub for dev auto-deploy demo

* chore: update workflows (ci, deploy, codeql, release), CODEOWNERS and README

* chore: fix yamllint violations across workflows

* chore: satisfy yamllint across workflows (brackets/colons/EOF/indent)

* fix(release): use softprops for auto notes (#12) (#13)

* Staging to Prod  (#17)

* feat(chart): add Helm chart stub for dev auto-deploy demo

* chore: update workflows (ci, deploy, codeql, release), CODEOWNERS and README

* chore: fix yamllint violations across workflows

* chore: satisfy yamllint across workflows (brackets/colons/EOF/indent)

* fix(release): use softprops for auto notes (#12) (#13)

* New CI Changes (#16)

* fix(release): use softprops for auto notes (#12)

* chore(ci): run CI on PRs only; deploy on push; release on tags (#15)

* chore(workflow): update service-deploy.yml to use central reusable workflow

* fix(workflows): move environment gate into reusable; remove illegal environment keys from callers

* Chore/update service deploy (#19)

* chore(workflow): update service-deploy.yml to

--- a/.github/workflows/auto-sync-main-to-dev.yml
+++ b/.github/workflows/auto-sync-main-to-dev.yml
@@ -1,50 +1,133 @@
-name: Auto sync main → dev
+name: Auto sync main → staging & dev
 
 on:
   release:
-    types: [published]
+    types: [published]          # When a GitHub Release is published
   push:
-    tags:
-      - 'v*'
-  workflow_dispatch:
+    tags: ["v*"]                # Or when a version tag is pushed
+  workflow_dispatch: {}         # Manual run
 
 permissions:
-  contents: read
-  pull-requests: write
+  contents: write               # push sync branches
+  pull-requests: write          # open/update PRs
 
 concurrency:
-  group: auto-sync-main-to-dev
+  group: auto-sync-main-to-branches
   cancel-in-progress: true
 
 jobs:
-  open-sync-pr:
+  sync:
     runs-on: ubuntu-latest
-    steps:
-      - name: Compare branches
-        id: compare
-        uses: actions/github-script@v7
-        with:
-          script: |
-            const {owner, repo} = context.repo;
-            const cmp = await github.rest.repos.compareCommits({ owner, repo, base: 'dev', head: 'main' });
-            core.setOutput('behind_by', String(cmp.data.behind_by));
+    strategy:
+      fail-fast: false
+      matrix:
+        target: [staging, dev]
 
-      - name: Open PR if dev is behind
-        if: steps.compare.outputs.behind_by != '0'
+    env:
+      SYNC_BRANCH: sync/main-to-${{ matrix.target }}-${{ github.run_id }}
+
+    steps:
+      - name: Compare ${{ matrix.target }}…main
+        id: cmp
         uses: actions/github-script@v7
         with:
           script: |
-            const {owner, repo} = context.repo;
-            const prs = await github.rest.pulls.list({ owner, repo, state: 'open', base: 'dev', head: `${owner}:main` });
-            if (prs.data.length) {
-              core.notice(`Sync PR already open: #${prs.data[0].number}`);
-              return;
-            }
-            const pr = await github.rest.pulls.create({
-              owner, repo,
-              title: 'chore(sync): main → dev',
-              head: 'main',
-              base: 'dev',
-              body: 'Automated sync of production branch **main** back into **dev** after release.',
+            const { owner, repo } = context.repo;
+            const r = await github.rest.repos.compareCommits({
+              owner, repo, base: '${{ matrix.target }}', head: 'main'
             });
-            core.notice(`Opened PR #${pr.data.number}`);
+            core.setOutput('behind_by', String(r.data.behind_by));
+
+      - name: Stop early if ${{ matrix.target }} is up to date
+        if: steps.cmp.outputs.behind_by == '0'
+        run: echo "${{ matrix.target }} is already up to date."
+
+      - name: Checkout ${{ matrix.target }} (full history)
+        if: steps.cmp.outputs.behind_by != '0'
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ matrix.target }}
+          fetch-depth: 0
+
+      - name: Configure git user
+        if: steps.cmp.outputs.behind_by != '0'
+        run: |
+          git config user.name  "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+      - name: Create sync branch from ${{ matrix.target }}
+        if: steps.cmp.outputs.behind_by != '0'
+        run: |
+          git fetch origin main ${{ matrix.target }}
+          git switch -c "$SYNC_BRANCH" "origin/${{ matrix.target }}"
+
+      - name: Merge main → ${{ matrix.target }} (keep target’s service-deploy.yml)
+        if: steps.cmp.outputs.behind_by != '0'
+        shell: bash
+        run: |
+          set -euxo pipefail
+          if ! git merge --no-ff --no-edit origin/main; then
+            git checkout --ours .github/workflows/service-deploy.yml || true
+            git add .github/workflows/service-deploy.yml || true
+            git commit -m "sync(main→${{ matrix.target }}): keep ${{ matrix.target }} copy of service-deploy.yml"
+          fi
+          git push -u origin "$SYNC_BRANCH"
+
+      - name: Open or update PR (→ ${{ matrix.target }})
+        if: steps.cmp.outputs.behind_by != '0'
+        id: pr
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { owner, repo } = context.repo;
+            const head = process.env.SYNC_BRANCH;
+            const base = '${{ matrix.target }}';
+
+            const list = await github.rest.pulls.list({
+              owner, repo, state: 'open', base, head: `${owner}:${head}`
+            });
+
+            let pr;
+            if (list.data.length) {
+              pr = list.data[0];
+            } else {
+              pr = (await github.rest.pulls.create({
+                owner, repo,
+                title: `chore(sync): main → ${base}`,
+                base,
+                head,
+                body: [
+                  `Automated sync of **main** back into **${base}** after release.`,
+                  '',
+                  '- Pre-resolved `.github/workflows/service-deploy.yml` to keep the target branch copy.',
+                  '- Merge method: regular **merge** to preserve production SHAs.'
+                ].join('\n')
+              })).data;
+            }
+            core.setOutput('number', pr.number);
+            core.notice(`Opened/updated PR #${pr.number} → ${base}`);
+
+      # Dev can be auto-merged, staging should remain review-gated
+      - name: Enable auto-merge (MERGE) for dev only
+        if: matrix.target == 'dev' && steps.cmp.outputs.behind_by != '0'
+        continue-on-error: true
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { owner, repo } = context.repo;
+            const number = Number("${{ steps.pr.outputs.number }}");
+            const q = await github.graphql(
+              `query($owner:String!,$repo:String!,$number:Int!){
+                 repository(owner:$owner,name:$repo){
+                   pullRequest(number:$number){ id }
+                 }
+               }`, { owner, repo, number }
+            );
+            const id = q.repository.pullRequest.id;
+            await github.graphql(
+              `mutation($id:ID!){
+                 enablePullRequestAutoMerge(input:{
+                   pullRequestId:$id, mergeMethod:MERGE
+                 }) { clientMutationId }
+               }`, { id }
+            );
